[package]
name = "map-bench"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3 # This is the maximum optimization level
lto = true    # Enables Link Time Optimization for further potential gains
codegen-units = 1 # Reduces the number of code generation units for better optimization opportunities
debug = 2

[dependencies]
# bfixmap = { path = "../bfix-map" }
bfixmap = { git = "https://github.com/ZacWalk/bfix-map.git" }
ahash = "0.8.11"
csv = "1.3.0"
evmap = "10.0.2"
lazy_static = "1.5.0"
mimalloc = "0.1.43"
parking_lot = "0.12.3"
plotters = "0.3.6"
rand = { version = "0.8.5", features = ["small_rng"] } 
scc = "2.1.16"
scopeguard = "1.2.0"
serde = { version = "1.0.209", features = ["derive"] }
structopt = "0.3.26"
winapi = { version = "0.3.9", features = ["memoryapi", "processtopologyapi"] }
thousands = "0.2.0"

